# jarvs

./: .gitignore  CMakeLists.txt  README.md  a.out  main.cpp
include/: assembler.hpp  generator.hpp  memory.hpp  processor.hpp  utils.hpp
src/: assembler.cpp  main.cpp  memory.cpp  processor.cpp
tests/: assembler_test.cpp  memory_test.cpp  processor_test.cpp
